[project]
name = "meta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "openai>=2.30.0",
    "openenv-core>=0.2.3",
]

[project.scripts]
server = "scheduler.server.app:main"

[tool.uv]
package = true

[tool.setuptools.package-dir]
"scheduler" = "scheduler"
"scheduler.server" = "scheduler/server"

[tool.pyright]
extraPaths = ["scheduler", "scheduler/server"]
